--- a/build
+++ b/build
@@ -75,9 +75,9 @@ echo "=== building package version" $(make version)
 make
 echo "=== running tests"
 if [ -e Gomfile ] ; then
-    gom exec go test -v -coverprofile=cover.out | go-junit-report > report.xml
+    gom exec go test -v -coverprofile=cover.out . github.com/efigence/go-powerdns/api github.com/efigence/go-powerdns/backend/memdb | go-junit-report > report.xml
 else
-    go test -v -coverprofile=cover.out | go-junit-report > report.xml
+    go test -v -coverprofile=cover.out . github.com/efigence/go-powerdns/api github.com/efigence/go-powerdns/backend/memdb  | go-junit-report > report.xml
 fi
 # cleanup resulting file, else any coverage tool fails with can't find "cmd.go": cannot find package "_/repo/path"
 sed -i -e "s#.*/\(.*\.go\)#\./\\1#" cover.out
