--- a/t-data/dns.yaml
+++ b/t-data/dns.yaml
@@ -9,20 +9,19 @@ defaults:
 
 zones:
     example.com:
-        ns: ns1.example.com
+        ns: [ ns1.example.com ]
         owner: hostmaster.example.com
-        expiry: 86400
+        expiry: 86400s
         records:
-            "*.":
-                - a: '1.2.3.4'
-                - a: '1.2.3.4'
-                - mx:
-                        "mx1-pri.example.com":
-                        "mx2-bcp.example.com":
-                            prio: 100
+            "*":
+                A: ['1.2.3.4']
+                MX:
+                    - value: mx1.example.com
+                    - value: mx2.example.com
+                      prio: 100
+                      ttl: 100s
             "www":
-                -a:
-                    '3.4.5.6':
-                        ttl: 3000
-                    '3.4.5.7':
-                        ttl: 300
+                ttl: 3000s
+                A:
+                    - '3.4.5.6'
+                    - '3.4.5.7'
