--- a/t-data/dns.yaml
+++ b/t-data/dns.yaml
@@ -25,3 +25,6 @@ zones:
                 A:
                     - '3.4.5.6'
                     - '3.4.5.7'
+            "":
+                ttl: 1234s
+                A: ['9.9.9.9']
