--- a/t-data/dns.yaml
+++ b/t-data/dns.yaml
@@ -11,7 +11,7 @@ zones:
     example.com:
         ns: [ ns1.example.com ]
         owner: hostmaster.example.com
-        expiry: 86400s
+        default_expiry: 86400s
         records:
             "*":
                 A: ['1.2.3.4']
